<resources>
    <string name="app_name">MCQ</string>
    <string name="title_activity_profspace">Professor Space</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_studentspace">Student Space</string>

    <string name="youare">You Are</string>
    <string name="stud">Student</string>
    <string name="prof">Professor</string>

    <string name="log">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="notyetsign">Not yet registered? SignUp Now</string>
    <string name="gomain">Go back to main </string>
    <string name="creatacc">Create account</string>
    <string name="specstud">study specialty</string>
    <string name="repPassword">Repeate Password</string>
    <string name="signUp">Sign Up</string>
    <string name="spec">specialty</string>
    <string name="deleAcc">Delete Account</string>
    <string name="logout">Log out</string>
    <string name="creQCM">Create MCQ</string>
    <string name="title">Title</string>
    <string name="nqsts">Number of questions</string>
    <string name="tqsts">Time by question</string>
    <string name="create">Create</string>
    <string name="wrqst">write question</string>
    <string name="cA">choix A</string>
    <string name="cB">choix B</string>
    <string name="cC">choix C</string>
    <string name="cD">choix D</string>
    <string name="corr">Correction</string>
    <string name="nxt">Next</string>
    <string name="passcode">Please enter MCQ pass code</string>
    <string name="MCQnotExist">Incorrect pass code, MCQ does not exist</string>
    <string name="search">Search</string>
    <string name="Cancel">Cancel</string>
    <string name="incorrect">username or password incorrect</string>
    <string name="verfpass">Please verify the passwords</string>
    <string name="useother">Please use another username or password</string>
    <string name="vide">Fill in all the fields</string>

</resources>