<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/backstud"
    tools:context=".SignUpStud">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creatacc"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/ETusersignupStud"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/iconpers"
                android:drawablePadding="8dp"
                android:hint="@string/Username"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/ETspecSignUpStud"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/stylo"
                android:drawablePadding="8dp"
                android:hint="@string/specstud"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
             />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/ETpasswordSingUpStud"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/passwordicon"
                android:drawablePadding="8dp"
                android:hint="@string/Password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/ETpasswordSingUpStudRep"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/passwordicon"
                android:drawablePadding="8dp"
                android:hint="@string/repPassword"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/BsignUpStud"
                android:text="@string/signUp"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius = "20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>